# GameByAI

./: .gitignore  Cargo.toml  README.md  TODO.md  build.bat  check.bat  config.ini  debug_rust.bat  et --hard HEAD  generate_spaceship_textures.bat  generate_textures.bat  improve_textures.md  main.cpp  run.bat  run_release.bat  run_test.bat  run_test_30s.bat  test_lighting.bat  test_simple.bat  test_visual.ps1
.cursor/rules/: cleanup-on-replace.mdc  component-auto-registration.mdc  ecs-architecture.mdc  minimal-changes.mdc  physics-collision.mdc  project-context.mdc  rust-borrowing.mdc  testing-protocol.md
assets/meshes/: wall_controlsystem.gltf  wall_energyconduit.gltf  wall_hullplating.gltf  wall_techpanel.gltf
cpp_backup/: Makefile  main.cpp  test.cpp
docs/: ai_texture_generation.md  enabled_disabled_system.md
maps/: default_level.json
scripts/: README.md  build_release.bat
src/: cli.rs  main.rs
src/ecs/: component.rs  components.rs  entity.rs  mod.rs  pathfinding.rs  query.rs  resource.rs  system.rs  systems.rs  world.rs
src/ecs/components/: collision.rs  entities.rs  lighting.rs  meshes.rs  mod.rs  pathfinding.rs  player.rs  rendering.rs  transform.rs  velocity.rs
src/game/: config.rs  ecs_state.rs  input.rs  level_data.rs  level_generator.rs  map.rs  mesh_export.rs  mod.rs  player.rs  raycast.rs  renderer_3d.rs  state.rs  texture_generator.rs
src/game/rendering/: deferred_renderer.rs  gltf_loader.rs  lowpoly_meshes.rs  materials.rs  mod.rs  renderer_3d.rs  vertex_data.rs
src/game/textures/: ai_generator.rs  cache.rs  candle_generator.rs  generator.rs  loader.rs  mod.rs  types.rs
src/testing/: mod.rs  performance_test.rs  runner.rs  screenshot_validator.rs  tests.rs  visual_tests.rs
tools/: README.md  sdxl_pbr_generator.py  sdxl_server.py  sdxl_spaceship_generator.py  temp_sd_generator.py
