[package]
name = "game-by-ai"
version = "0.1.0"
edition = "2021"
description = "A 3D first-person game created with AI assistance using Rust"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
macroquad = "0.4"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
image = "0.24"
gltf = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"

# Real AI texture generation with Python subprocess (working approach)
# This gives us actual SDXL generation without Rust ML dependency issues
# Support libraries
anyhow = "1.0"
png = "0.17"
rand = "0.8"

[dev-dependencies]
# Testing dependencies (only used during development)

[features]
default = []
# Feature for automated testing without graphics
test-mode = []

# Build profiles for different targets
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

# Cross-platform build targets (commented for future use)
# [target.x86_64-pc-windows-gnu]
# [target.x86_64-apple-darwin]  
# [target.x86_64-unknown-linux-gnu]
